--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
   <script>
     // You can also require other files to run in this process
-    require('./dist/renderer.js')
+    require('./renderer/renderer.js')
   </script>
 </html>
