--- a/loading.html
+++ b/loading.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Node-RED desktop</title>
+    <title>Node-RED-Desktop</title>
     <style>
 .centered {
   position: fixed;
