--- a/settings.html
+++ b/settings.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Node-RED-Desktop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-switch@1.0.1/dist/bulma-switch.min.css">
+    <link rel="stylesheet" href="./bulma.min.css">
+    <link rel="stylesheet" href="./bulma-switch.min.css">
   </head>
   <body>
     <section class="section">
