--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,13 @@
               <label id="label-allowprerelease" class="label" for="allowprerelease">Allow usging prerelase</label>
             </div>
           </div>
+
+          <div class="field">
+            <div class="control">
+              <input id="openlastfile" type="checkbox" name="openlastfile" class="switch is-rtl">
+              <label id="label-openlastfile" class="label" for="openlastfile">Open a last file on startup</label>
+            </div>
+          </div>
         </div>
 
         <hr>
