--- a/settings.html
+++ b/settings.html
@@ -55,6 +55,21 @@
             </div>
           </div>
 
+          <div class="field">
+            <label id="label-httpnodeauth" class="label">HTTP Node Auth</label>
+            <div class="level">
+              <div class="level-item"></div>
+              <label id="label-httpnodeauthuser" class="label level-item">username</label>
+              <div class="control level-item">
+                <input id="httpnodeauthuser" class="input" type="text" placeholder="">
+              </div>
+              <label id="label-httpnodeauthpass" class="label level-item">password</label>
+              <div class="control level-item">
+                <input id="httpnodeauthpass" class="input" type="text" placeholder="">
+              </div>
+            </div>
+          </div>
+
         </div>
 
         <div data-content="2" class="container">
