fix #4, add LISTEN_PORT in settings

--- a/settings.html
+++ b/settings.html
@@ -70,6 +70,13 @@
             </div>
           </div>
 
+          <div class="field">
+            <label id="label-listenport" class="label">Listen port</label>
+            <div class="control">
+              <input id="listenport" class="input" type="text" placeholder="when empty,use random port">
+            </div>
+          </div>
+
         </div>
 
         <div data-content="2" class="container">
