--- a/settings.html
+++ b/settings.html
@@ -87,7 +87,7 @@
                 <div class="red-ui-settings-row">
                   <label id="label-nodesexcludes" for="node-input-blacklist">Nodes blacklist</label>
                   <textarea id="nodesexcludes" name="nodesexcludes" style="display: none;"></textarea>
-                  <div style="height: 250px; min-height:150px;" class="node-text-editor" id="node-input-blacklist"></div>
+                  <div style="height: 100px;" class="node-text-editor" id="node-input-blacklist"></div>
                 </div>
                 <div class="red-ui-settings-row">
                     <label id="label-projects" for="projects">Enable Projects</label>
